Execute this program only in Google Colab!!!!!!

--- a/COLAB_CAMERA.ipynb
+++ b/COLAB_CAMERA.ipynb
@@ -33,6 +33,7 @@
         "id": "v1dTUd7gY82O"
       },
       "source": [
+        "//A python program to take ur pic using google colab\n"
         "import tempfile\n",
         "import cv2\n",
         "\n",
