A simple and funny Number guessing game

--- a/Number_Guessing_Game.ipynb
+++ b/Number_Guessing_Game.ipynb
@@ -6,7 +6,7 @@
       "name": "Number Guessing Game.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOCslf47rEHTwsUm3zVDfrQ",
+      "authorship_tag": "ABX9TyNkKSS2dWkJB2Vuq7fw4aFR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,17 +42,17 @@
         "    else:\n",
         "        print(\"The current high score is {} attempts\".format(min(attempts_list)))\n",
         "def start_game():\n",
-        "    random_number = int(random.randint(1, 10))\n",
+        "    random_number = int(random.randint(1, 100))\n",
         "    print(\"Hello traveler! Welcome to the game of guesses!\")\n",
         "    player_name = input(\"What is your name? \")\n",
-        "    wanna_play = input(\"Hi, {}, would you like to play the guessing game? (Enter Yes/No) \".format(player_name))\n",
+        "    wanna_play = input(\"Hi {}, would you like to play the guessing game? (Enter Yes/No) \".format(player_name))\n",
         "    # // Where the show_score function USED to be\n",
         "    attempts = 0\n",
         "    show_score()\n",
         "    while wanna_play.lower() == \"yes\":\n",
         "        try:\n",
-        "            guess = input(\"Pick a number between 1 and 10 \")\n",
-        "            if int(guess) < 1 or int(guess) > 10:\n",
+        "            guess = input(\"Pick a number between 1 and 100 \")\n",
+        "            if int(guess) < 1 or int(guess) > 100:\n",
         "                raise ValueError(\"Please guess a number within the given range\")\n",
         "            if int(guess) == random_number:\n",
         "                print(\"Nice! You got it!\")\n",
@@ -62,15 +62,15 @@
         "                play_again = input(\"Would you like to play again? (Enter Yes/No) \")\n",
         "                attempts = 0\n",
         "                show_score()\n",
-        "                random_number = int(random.randint(1, 10))\n",
+        "                random_number = int(random.randint(1, 100))\n",
         "                if play_again.lower() == \"no\":\n",
-        "                    print(\"That's cool, have a good one!\")\n",
+        "                    print(\"That's cool, have a Good Day!\")\n",
         "                    break\n",
         "            elif int(guess) > random_number:\n",
-        "                print(\"It's lower\")\n",
+        "                print(\"It's lower than this number\")\n",
         "                attempts += 1\n",
         "            elif int(guess) < random_number:\n",
-        "                print(\"It's higher\")\n",
+        "                print(\"It's higher than this number\")\n",
         "                attempts += 1\n",
         "        except ValueError as err:\n",
         "            print(\"Oh no!, that is not a valid value. Try again...\")\n",
