A simple and funny Number guessing game

--- a/Number_Guessing_Game.ipynb
+++ b/Number_Guessing_Game.ipynb
@@ -38,7 +38,7 @@
         "attempts_list = []\n",
         "def show_score():\n",
         "    if len(attempts_list) <= 0:\n",
-        "        print(\"There is currently no high score, it's yours for the taking!\")\n",
+        "        print(\"There is currently no high score, it's yours for the taking!Try to finish with as less attempts as possible!! GOOD LUCK!!!!\")\n",
         "    else:\n",
         "        print(\"The current high score is {} attempts\".format(min(attempts_list)))\n",
         "def start_game():\n",
